# desktoptracks

./: ChangeLog  Makefile.am  ProjectHome.md  autoclean.sh  autogen.sh  configure.in
daemon/: Makefile.am  Makefile.in  appstats.c  desktoptracksd.c
data/: Makefile  Makefile.am  Makefile.in  desktoptracks.desktop.in.in  desktoptracks.glade
dbus-daemon/: Makefile.am  appstats.c  desktoptracksd.c  desktoptracksd.h  desktoptracksd.xml
frontend/: Makefile.am
tags/release-0.1.0/: AUTHORS  Makefile.am  autogen.sh
tags/release-0.1.0/daemon/: Makefile.in  appstats.h  desktoptracksd.xml
tags/release-0.1.0/data/: Makefile.am
tags/release-0.1.0/frontend/: Makefile.am  desktoptracks.py
tags/release-0.1.1/: ChangeLog  Makefile.am
tags/release-0.1.1/daemon/: appstats.c
tags/release-0.1.1/frontend/: desktoptracks.py
trunk/: AUTHORS  ChangeLog  Makefile.am  configure.in
trunk/daemon/: Makefile.in  appstats.c  desktoptracksd.c
trunk/data/: Makefile  Makefile.in  desktoptracks.glade
trunk/dbus-daemon/: Makefile.in  appstats.c  appstats.h  desktoptracksd.c  desktoptracksd.h
trunk/frontend/: Makefile.am  desktoptracks.glade  desktoptracks.py
