ENV_CFLAGS=$CFLAGS

AC_PREREQ(2.59)
AC_INIT([desktoptracks], 0.1.1, [kassoulet@gmail.com], desktoptracks)
AC_CONFIG_SRCDIR([daemon/desktoptracksd.c])
AC_LANG(C)
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE

AC_PROG_CC
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h sys/ioctl.h unistd.h])

AC_PATH_PROG(DBUSBINDINGTOOL, dbus-binding-tool, no)

if test "x$DBUSBINDINGTOOL" = "xno"; then
	AC_MSG_ERROR([dbus-binding-tool not found in your PATH. Please correct this])
fi

AC_SUBST(DBUS_BINDING_TOOL)

PKG_CHECK_MODULES([DBUSGLIB], [dbus-glib-1 >= 0.73])
PKG_CHECK_MODULES([X11], [x11])
PKG_CHECK_MODULES([GTK], [gtk+-2.0 >= 2.10])


CFLAGS="${CFLAGS} -Wall"

dnl debug mode
AC_MSG_CHECKING(debug mode)
AC_ARG_ENABLE(debug,AC_HELP_STRING([--enable-debug], [Enable debug build (default=no)]),, enable_debug=no )
if test x$enable_debug = xyes; then
	AC_MSG_RESULT(yes)
	CFLAGS="${CFLAGS} -g -O0"
	LIBS="$LIBS -g"
else
	AC_MSG_RESULT(no)
fi

dnl ==========================================================================

AC_OUTPUT([
daemon/Makefile
frontend/Makefile
data/Makefile
Makefile
])

echo "
DesktopTracks $VERSION configuration summary:

        prefix                   : ${prefix}
        source code location     : ${srcdir}
        compiler                 : ${CC}
        compiler flags           : ${CFLAGS}
"
